--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <h1>Suwuperviser</h1>
+      <h5 id="joke"></h5>
     </header>
     <main>
       <div class="top-section">
