--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <a href="/"><img src="/house.png" /></a>
       <h1>Suwuperviser</h1>
       <h5 id="joke"></h5>
     </header>
