--- a/public/inspect.html
+++ b/public/inspect.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <title>Program Details</title>
-    <link rel="stylesheet" href="/inspectscript.css" />
+    <link rel="stylesheet" href="/inspectstyles.css" />
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <header>
-      <a href="/dashboard" style="color: white">
-        <h1 id="process-name"></h1>
-      </a>
+      <a href="/"><img src="/house.png" /></a>
+      <h1 id="process-name"></h1>
     </header>
     <main>
       <div class="process-info">
