Added logout button

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -14,6 +14,10 @@
         onclick="document.getElementById('transitionDiv').style.opacity = 1; setTimeout(()=>window.location.href = '/', 500);"
         ><img src="/house.png"
       /></a>
+      <a
+        onclick="document.cookie = 'session=; expires=Thu, 01 Jan 1970 00:00:01 GMT; path=/;'; window.location.href = '/'"
+        ><img src="/logout.png" class="right"
+      /></a>
       <h1>Suwuperviser</h1>
       <h5 id="joke"></h5>
     </header>
