Renamed Actions to just Inspect

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -70,7 +70,7 @@
             <tr>
               <th>Program Name</th>
               <th>Port</th>
-              <th>Actions</th>
+              <th>Inspect</th>
             </tr>
           </thead>
           <tbody id="process-list-body"></tbody>
