You can upload zip files now!

--- a/public/inspect.html
+++ b/public/inspect.html
@@ -38,10 +38,10 @@
     </main>
     <center>
       <div class="file-viewer">
-        <div class="file-tree"></div>
-        <div class="file-content"></div>
+        <div class="file-tree" id="file-tree"></div>
+        <div class="file-content" id="file-content"></div>
       </div>
     </center>
-    <script src="/inspectscript.js"></script>
+    <script src="/inspectscript.js" defer></script>
   </body>
 </html>
