--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -4,6 +4,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/sweetalert.js"></script>
   </head>
   <body
     onload="setTimeout(()=>document.getElementById('transitionDiv').style.opacity = 0, 500)"
