GitHub links work!

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -60,7 +60,7 @@
               name="process-port"
               required
             />
-            <button type="submit">Add Program</button>
+            <button type="submit" id="add-program">Add Program</button>
           </form>
         </div>
       </div>
