Swappeed Network Traffic for Network Speed

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="canvasContainer">
               <canvas id="network-traffic-chart"></canvas><br />
-              Network Usage
+              Network Speed
             </div>
           </div>
         </div>
