--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -30,15 +30,15 @@
           <div class="graph-container">
             <div class="canvasContainer">
               <canvas id="cpu-usage-chart"></canvas><br />
-              CPU Usage
+              CPU Usage (%)
             </div>
             <div class="canvasContainer">
               <canvas id="ram-availability-chart"></canvas><br />
-              RAM Availability
+              RAM Availability (Gb)
             </div>
             <div class="canvasContainer">
               <canvas id="network-traffic-chart"></canvas><br />
-              Network Speed
+              Network Speed (Mbps)
             </div>
           </div>
         </div>
