Cleaned up some things and made it more linux compatible.

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="canvasContainer">
               <canvas id="ram-availability-chart"></canvas><br />
-              RAM Availability (Gb)
+              RAM Availability (%)
             </div>
             <div class="canvasContainer">
               <canvas id="network-traffic-chart"></canvas><br />
